[gd_scene load_steps=5 format=3 uid="uid://b0utt7w4r4u2r"]

[ext_resource type="Script" path="res://Mob.gd" id="1_1n31u"]
[ext_resource type="PackedScene" uid="uid://cx85xgka17jb6" path="res://enemyBullet.tscn" id="2_73nhc"]
[ext_resource type="Texture2D" uid="uid://b1nps51me5px6" path="res://assets/kenney-prototyping/PNG/Dark/texture_04.png" id="2_vbwel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7o51d"]
size = Vector2(53, 53)

[node name="Mob" type="Area2D" groups=["mobs"]]
collision_mask = 2
script = ExtResource("1_1n31u")
enemyBullet = ExtResource("2_73nhc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.101758, 0.101758)
texture = ExtResource("2_vbwel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_7o51d")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 70)

[node name="EnemyWeapon" type="Marker2D" parent="Node2D"]
rotation = 1.5708
gizmo_extents = 82.1

[node name="WeaponTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="WeaponTimer" to="." method="_on_weapon_timer_timeout"]
